# tentacle

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  azure-pipelines.yml  windows-dependencies.yml
.cargo/: config
.github/: CODEOWNERS
.github/workflows/: ci.yaml  release.yaml  tentacle_yamux_throughput.yaml
bench/: Cargo.toml  README.md
bench/src/: lib.rs  main.rs
benches/: bench.rs
discovery/: Cargo.toml  LICENSE  README.md
discovery/examples/: simple.rs
discovery/src/: addr.rs  gen_proto.sh  lib.rs  message.rs  protocol_generated.rs  substream.rs
doces/: introduction.md  introduction_zh.md
docs/: introduction_en.md  introduction_zh.md
examples/: block_send.rs  disc.rs  discovery.rs  heavy_task_schedule.rs  id.rs  ping.rs  simple.rs  use_poll.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/secio/crypto/: decrypt_cipher.rs  encrypt_cipher.rs
fuzz/fuzz_targets/yamux/: frame_codec.rs
identify/: Cargo.toml
identify/src/: lib.rs  message.rs  protocol.fbs  protocol.rs  protocol_generated.rs
multiaddr/: Cargo.toml  README.md
multiaddr/src/: error.rs  lib.rs  onion_addr.rs  protocol.rs
multiaddr/tests/: lib.rs  onion.rs  quic.rs
ping/: Cargo.toml
ping/src/: lib.rs  protocol.fbs  protocol_builder.rs  protocol_generated.rs
protocols/discovery/: Cargo.toml  README.md
protocols/discovery/examples/: disc.rs
protocols/discovery/src/: addr.rs  gen_proto.sh  lib.rs  protocol.fbs  protocol.mol  protocol.rs  protocol_generated_verifier.rs  protocol_mol.rs  state.rs  substream.rs
protocols/identify/: Cargo.toml  README.md
protocols/identify/examples/: id.rs
protocols/identify/src/: lib.rs  protocol.fbs  protocol.mol  protocol.rs  protocol_generated.rs  protocol_generated_verifier.rs  protocol_mol.rs
protocols/ping/: Cargo.toml
protocols/ping/.cargo/: config
protocols/ping/examples/: ping.rs
protocols/ping/src/: lib.rs  protocol.mol  protocol_generated.rs  protocol_generated_verifier.rs  protocol_mol.rs
secio/: Cargo.toml  README.md  build.rs
secio/benches/: bench.rs
secio/examples/: secio_simple.rs  simple.rs
secio/src/: error.rs  exchange.rs  lib.rs  peer_id.rs  stream_cipher.rs  support.rs
secio/src/codec/: mod.rs  secure_stream.rs  stream_handle.rs
secio/src/codec/hmac_compat/: mod.rs  native.rs  openssl_impl.rs  ring_impl.rs  wasm_compat.rs
secio/src/crypto/: cipher.rs  mod.rs  openssl_impl.rs  ring_impl.rs  wasm_compat.rs
secio/src/dh_compat/: mod.rs  native.rs  openssl_impl.rs  ring_impl.rs  wasm_compat.rs
secio/src/handshake/: gen_proto.sh  handshake.fbs  handshake.mol  handshake_context.rs  handshake_generated.rs  handshake_generated_verifier.rs  handshake_mol.rs  handshake_struct.rs  mod.rs  procedure.rs
secio/src/hd_compat/: mod.rs
secio/src/secp256k1_compat/: mod.rs  native.rs  wasm_compat.rs
secio/src/sha256_compat/: mod.rs  native.rs  openssl_impl.rs  ring_impl.rs  wasm_compat.rs
simple_wasm/: Cargo.toml  index.js  package.json
simple_wasm/src/: lib.rs  simple.rs
simple_wasm/www/: index.js  package.json
src/: buffer.rs  builder.rs  config.rs  context.rs  error.rs  lib.rs  protocol_handle_stream.rs  service.rs  session.rs  sessions.rs  substream.rs  traits.rs  utils.rs
src/channel/: bound.rs  mod.rs  sink_impl.rs  unbound.rs
src/protocol_select/: gen_proto.sh  mod.rs  (+4 more)
tentacle/: Cargo.toml  README.md
tentacle/examples/: block_send.rs  heavy_task_schedule.rs  simple.rs  simple_using_spawn.rs  use_poll.rs  use_spawn.rs
tentacle/src/: buffer.rs  builder.rs  context.rs  error.rs  lib.rs  protocol_handle_stream.rs  service.rs  session.rs  substream.rs  traits.rs  utils.rs
tentacle/src/channel/: bound.rs  mod.rs  queue.rs  sink_impl.rs  unbound.rs
tentacle/src/channel/tests/: channel.rs  mod.rs  mpsc.rs  mpsc_close.rs  mpsc_priority.rs
tentacle/src/lock/: mod.rs  native.rs
tentacle/src/protocol_select/: mod.rs  protocol_select.fbs  protocol_select.mol  protocol_select_mol.rs
tentacle/src/quic/: config.rs  endpoint.rs  error.rs  identity.rs  identity_mol.rs  mod.rs  session.rs  stream.rs  verifier.rs
tentacle/src/runtime/: async_runtime.rs  budget.rs  generic_timer.rs  mod.rs  tokio_runtime.rs  wasm_runtime.rs
tentacle/src/runtime/proxy/: mod.rs  socks5.rs  socks5_config.rs
tentacle/src/runtime/tokio_runtime/: mod.rs
tentacle/src/service/: config.rs  control.rs  event.rs  future_task.rs  helper.rs
tentacle/src/transports/: browser.rs  memory.rs  mod.rs  onion.rs  proxy_protocol.rs  tcp.rs  tcp_base_listen.rs  tls.rs  websocket.js  ws.rs
tentacle/src/upnp/: mod.rs  unix.rs  windows.rs
tentacle/src/utils/: dns.rs
tentacle/tests/: tcp_upgrade_mod.rs  test_before_function.rs  test_block_future_task.rs  test_block_send.rs  test_block_send_session.rs  test_close.rs  test_dial.rs  test_dial_unsupported_order.rs  test_disconnect.rs  test_kill.rs  test_large_pending_messge.rs  test_peer_id.rs  test_priority.rs  test_protocol_open.rs  test_protocol_open_close_on_spawn.rs  test_proxy_protocol.rs  test_quic.rs  test_quic_verifier.rs  test_session_handle_open.rs  test_session_protocol_open_close.rs  test_session_protocol_order.rs  test_spawn_first_message.rs  test_tcp_upgrade_mod.rs  test_tls_dial.rs  test_tls_reconnect.rs  test_uninterrupter_poll.rs  tls_common.rs
tentacle/tests/certificates/node0/: ca.crt  server.crt  server.key
tentacle/tests/certificates/node1/: server.crt  server.key
tentacle/tests/certificates/node2-wrong/: ca.crt  server.crt  server.key
tentacle/tests/certificates/tlsca/: ca.key
tentacle_yamux_throughput/: statistics.py
tests/: test_before_function.rs  test_block_future_task.rs  test_block_send.rs  test_block_send_session.rs  test_close.rs  test_dial.rs  test_disconnect.rs  test_kill.rs  test_peer_id.rs  test_priority.rs  test_protocol_open.rs  test_session_handle_open.rs  test_session_protocol_open_close.rs
yamux/: Cargo.toml  README.md
yamux/benches/: bench.rs
yamux/examples/: simple.rs  throughput_test.rs  yamux_simple.rs
yamux/src/: config.rs  control.rs  error.rs  frame.rs  lib.rs  session.rs  stream.rs
(+19 files in other folders)
