[package]
name = "tentacle"
version = "0.2.0"
license = "MIT"
description = "Minimal implementation for a multiplexed p2p network framework."
authors = ["piaoliu <441594700@qq.com>", "Nervos Core Dev <dev@nervos.org>"]
repository = "https://github.com/nervosnetwork/p2p"
include = ["Cargo.toml", "src/*", "README.md", "LICENSE"]
readme = "README.md"
keywords = ["network", "peer-to-peer"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
yamux = { path = "yamux", version = "0.1.12", package = "tokio-yamux" }
secio = { path = "secio", version = "0.1.7", package = "tentacle-secio" }

futures = "0.1"
tokio = "0.1"
log = "0.4"
bytes = "0.4"
tokio-threadpool = "0.1"

flatbuffers = "0.6.0"
flatbuffers-verifier = "0.2.0"
multiaddr = { package = "parity-multiaddr", version = "0.4.0" }

[dev-dependencies]
env_logger = "0.6.0"
fnv = "1.0"
crossbeam-channel = "0.3.6"
generic-channel = { version = "0.2.0", features = ["all"] }
systemstat = "0.1.3"
ping = { path = "protocols/ping", package = "tentacle-ping" }
identify = { path = "protocols/identify", package = "tentacle-identify" }
discovery = { path = "protocols/discovery", package="tentacle-discovery" }

[target.'cfg(unix)'.dev-dependencies]
nix = "0.13.0"

[workspace]
members = [
  "yamux",
  "secio",
  "bench",
  "protocols/discovery",
  "protocols/identify",
  "protocols/ping",
]
