[package]
name = "tentacle"
version = "0.3.0-alpha.2"
license = "MIT"
description = "Minimal implementation for a multiplexed p2p network framework."
authors = ["piaoliu <441594700@qq.com>", "Nervos Core Dev <dev@nervos.org>"]
repository = "https://github.com/nervosnetwork/p2p"
include = ["Cargo.toml", "src/*", "README.md", "LICENSE"]
readme = "README.md"
keywords = ["network", "peer-to-peer"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[package.metadata.docs.rs]
features = [ "molc" ]
all-features = false
no-default-features = true

[dependencies]
yamux = { path = "yamux", version = "0.2.1", package = "tokio-yamux" }
secio = { path = "secio", version = "0.3.1", package = "tentacle-secio" }

futures = { version = "0.3.0" }
tokio = { version = "0.2.0", features = ["time", "io-util", "tcp", "dns", "rt-threaded", "blocking"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
log = "0.4"
bytes = "0.5.0"

flatbuffers = { version = "0.6.0", optional = true }
flatbuffers-verifier = { version = "0.2.0", optional = true }
multiaddr = { path = "multiaddr", package = "tentacle-multiaddr", version = "0.1.0" }
molecule = { version = "0.5.0", optional = true }

# upnp
igd = "0.9"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.7"
features = ["minwindef", "ws2def", "winerror", "heapapi"]

[dev-dependencies]
env_logger = "0.6.0"
crossbeam-channel = "0.3.6"
systemstat = "0.1.3"

[target.'cfg(unix)'.dev-dependencies]
nix = "0.13.0"

[features]
default = []
# use flatbuffer to handshake
flatc = [ "flatbuffers", "flatbuffers-verifier", "secio/flatc" ]
# use molecule to handshake
molc = [ "molecule", "secio/molc" ]

[workspace]
members = [
  "yamux",
  "secio",
  "multiaddr",
  "bench",
]
exclude = [
  "protocols/discovery",
  "protocols/identify",
  "protocols/ping",
]
