[package]
name = "bench"
version = "0.1.0"
authors = ["piaoliu <441594700@qq.com>"]
edition = "2018"

[lib]
name = "bench"

[[bin]]
name = "main"
path = "./src/main.rs"

[dependencies]
p2p = { path = "..", package = "tentacle" }
rand = "0.6.1"
tokio = "0.2.0-alpha.3"
futures = { version = "0.3.0-alpha.18", package = "futures-preview" }
crossbeam-channel = "0.3.6"
env_logger = "0.6.0"
bytes = "0.4"

[features]
default = []
# use flatbuffer to handshake
flatc = [ "p2p/flatc" ]
# use molecule to handshake
molc = [ "p2p/molc" ]
