[package]
name = "bench"
version = "0.1.0"
authors = ["piaoliu <441594700@qq.com>"]
edition = "2018"

[lib]
name = "bench"

[[bin]]
name = "main"
path = "./src/main.rs"

[dependencies]
p2p = { path = "..", package = "tentacle" }
rand = "0.6.1"
futures = { version = "0.3.0" }
tokio = { version = "0.2.0", features = ["time", "io-util", "tcp", "dns", "rt-threaded", "blocking"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
crossbeam-channel = "0.3.6"
env_logger = "0.6.0"
bytes = "0.5.0"

[features]
default = []
# use flatbuffer to handshake
flatc = [ "p2p/flatc" ]
# use molecule to handshake
molc = [ "p2p/molc" ]
