[package]
name = "tentacle-multiaddr"
version = "0.3.2"
authors = ["driftluo <driftluo@foxmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unsigned-varint = "0.7"
bytes = "1.0"
bs58 = "0.4.0"
sha2 = "0.10.0"
serde = "1"

[dev-dependencies]
parity-multiaddr = "0.11"
