[package]
name = "tentacle-multiaddr"
version = "0.3.4"
authors = ["driftluo <driftluo@foxmail.com>"]
edition = "2021"
repository = "https://github.com/nervosnetwork/tentacle"
license = "MIT"
description = "Mini Implementation of multiaddr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unsigned-varint = "0.8"
bytes = "1.0"
bs58 = "0.5.0"
sha2 = "0.10.0"
serde = "1"
byteorder = "1.5.0"
data-encoding = "2.6.0"
arrayref = "0.3.9"

[dev-dependencies]
parity-multiaddr = "0.11"
