[package]
name = "tentacle-secio"
version = "0.5.3"
license = "MIT"
description = "Secio encryption protocol for p2p"
authors = ["piaoliu <driftluo@foxmail.com>", "Nervos Core Dev <dev@nervos.org>"]
repository = "https://github.com/nervosnetwork/tentacle"
keywords = ["network", "peer-to-peer"]
categories = ["network-programming", "asynchronous"]
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
features = []
all-features = false
no-default-features = true

[dependencies]
bytes = "1.0"
futures = { version = "0.3.0" }
tokio = { version = "1.0", features = ["io-util"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
log = "0.4.1"

molecule = "0.7.0"

unsigned-varint = "0.7"
bs58 = "0.4.0"
secp256k1 = "0.20"

[target.'cfg(unix)'.dependencies]
openssl = "0.10.25"
openssl-sys = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8"
ring = "0.16.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand_core = { version = "0.5" }
rand = { version = "0.7", features = ["wasm-bindgen"] }
sha2 = "0.10.0"
hmac = "0.12.0"
x25519-dalek = "1.1"
chacha20poly1305 = "0.9"

[dev-dependencies]
env_logger = "0.6"
criterion = "0.3"
tokio = { version = "1.0.0", features = ["net", "rt", "rt-multi-thread"] }
sha2 = "0.10.0"
hmac = "0.12.0"
x25519-dalek = "1.1"
chacha20poly1305 = "0.9"
rand_core = { version = "0.5" }
once_cell = "1.8.0"
proptest = "1"

[[bench]]
name = "bench"
harness = false
