[package]
name = "tentacle-secio"
version = "0.6.2"
license = "MIT"
description = "Secio encryption protocol for p2p"
authors = ["piaoliu <driftluo@foxmail.com>", "Nervos Core Dev <dev@nervos.org>"]
repository = "https://github.com/nervosnetwork/tentacle"
keywords = ["network", "peer-to-peer"]
categories = ["network-programming", "asynchronous"]
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
features = []
all-features = false
no-default-features = true

[dependencies]
bytes = "1.0"
futures = { version = "0.3.0" }
tokio = { version = "1.0", features = ["io-util"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
log = "0.4.1"
async-trait = { version = "0.1", optional = true }

molecule = "0.8.0"

unsigned-varint = "0.8"
bs58 = "0.5.0"
secp256k1 = "0.29"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
openssl = "0.10.25"
openssl-sys = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand_core = { version = "0.6" }
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10.0"
hmac = "0.12.0"
x25519-dalek = { version = "2" }
chacha20poly1305 = { version = "0.10", default-features = false, features = [
    "alloc",
    "rand_core",
] }

[features]
openssl-vendored = ["openssl/vendored"]

[dev-dependencies]
env_logger = "0.6"
criterion = "0.3"
tokio = { version = "1.0.0", features = ["net", "rt", "rt-multi-thread"] }
sha2 = "0.10.0"
hmac = "0.12.0"
x25519-dalek = "2"
chacha20poly1305 = "0.10"
rand_core = { version = "0.6" }
once_cell = "1.8.0"
proptest = "1"

[[bench]]
name = "bench"
harness = false
