[package]
name = "tentacle"
version = "0.3.1"
license = "MIT"
description = "Minimal implementation for a multiplexed p2p network framework."
authors = ["piaoliu <441594700@qq.com>", "Nervos Core Dev <dev@nervos.org>"]
repository = "https://github.com/nervosnetwork/tentacle"
readme = "README.md"
keywords = ["network", "peer-to-peer"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[package.metadata.docs.rs]
features = [ "molc" ]
all-features = false
no-default-features = true

[dependencies]
yamux = { path = "../yamux", version = "0.2.6", default-features = false, package = "tokio-yamux"}
secio = { path = "../secio", version = "0.4.1", package = "tentacle-secio" }

futures = { version = "0.3.0" }
tokio = { version = "0.2.0" }
tokio-util = { version = "0.3.0", features = ["codec"] }
log = "0.4"
bytes = "0.5.0"
thiserror = "1.0"
socket2 = { version = "0.3.15", features = ["reuseport"] }
tokio-tungstenite = { version = "0.11", optional = true }
futures-timer = { version = "3.0.2", optional = true }
async-std = { version = "1", features = ["unstable"], optional = true }
async-io = { version = "1", optional = true }

flatbuffers = { version = "0.6.0", optional = true }
flatbuffers-verifier = { version = "0.2.0", optional = true }
multiaddr = { path = "../multiaddr", package = "tentacle-multiaddr", version = "0.2.0" }
molecule = { version = "0.6.0", optional = true }

# upnp
igd = "0.9"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.7"
features = ["minwindef", "ws2def", "winerror", "heapapi"]

[dev-dependencies]
env_logger = "0.6.0"
crossbeam-channel = "0.3.6"
systemstat = "0.1.3"
futures-test = "0.3.5"

[target.'cfg(unix)'.dev-dependencies]
nix = "0.13.0"

[features]
default = ["tokio-runtime", "tokio-timer"]
# use flatbuffer to handshake
flatc = [ "flatbuffers", "flatbuffers-verifier", "secio/flatc" ]
# use molecule to handshake
molc = [ "molecule", "secio/molc" ]
ws = ["tokio-tungstenite"]

# Related to runtime

tokio-timer = ["yamux/tokio-timer", "tokio/time", "tokio-runtime"]
tokio-runtime = ["tokio/io-util", "tokio/tcp", "tokio/dns", "tokio/rt-threaded", "tokio/blocking"]

async-timer = ["async-runtime"]
async-runtime = ["async-std", "async-io", "yamux/generic-timer", "tokio-util/compat"]

generic-timer = ["futures-timer", "yamux/generic-timer"]
wasm-timer = ["futures-timer", "yamux/wasm", "futures-timer/wasm-bindgen"]