[package]
name = "tokio-yamux"
version = "0.1.14"
license = "MIT"
repository = "https://github.com/nervosnetwork/p2p"
description = "Rust implementation of Yamux"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
bytes = "0.5.0"
futures = { version = "0.3.0" }
tokio = { version = "0.2.0", features = ["time", "io-util", "tcp", "dns"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
log = "0.4"

[dev-dependencies]
env_logger = "0.6"
rand = "0.6"
