[package]
name = "tokio-yamux"
version = "0.2.10"
license = "MIT"
repository = "https://github.com/nervosnetwork/tentacle"
description = "Rust implementation of Yamux"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
bytes = "0.5.0"
futures = { version = "0.3.0" }
tokio = { version = "0.2.0" }
tokio-util = { version = "0.3.0", features = ["codec"] }
log = "0.4"

futures-timer = { version = "3.0.2", optional = true }

[dev-dependencies]
env_logger = "0.6"
rand = "0.7"
bytesize = "1"
tokio = { version = "0.2.0", features = ["time", "dns", "tcp", "io-util", "rt-core"] }

[features]
default = ["tokio-timer"]
# use tokio timer
tokio-timer = ["tokio/time"]
# generic timer, this means that yamux can run under any runtime
# the difference of `AsyncRead/AsyncWrite` can be converted by `tokio-util`
generic-timer = ["futures-timer"]
# use futures-timer's wasm feature
wasm = ["generic-timer", "futures-timer/wasm-bindgen"]
