[package]
name = "tentacle-discovery"
version = "0.2.8"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
license = "MIT"
description = "p2p discovery protocol main reference bitcoin"
keywords = ["network", "peer-to-peer", "p2p", "discovery"]
repository = "https://github.com/nervosnetwork/p2p"
categories = ["network-programming", "asynchronous"]
edition = "2018"

[package.metadata.docs.rs]
features = [ "molc" ]
all-features = false
no-default-features = true

[dependencies]
p2p = { path = "../..", version = "0.2.6", package = "tentacle" }
bytes = "0.4"
byteorder = "1.2"
futures = "0.1"
tokio = "0.1"
log = "0.4"
rand = "0.6.1"
flatbuffers = { version = "0.6.0", optional = true }
flatbuffers-verifier = { version = "0.2.0", optional = true }
molecule = { version = "0.4.0", optional = true }

[dev-dependencies]
env_logger = "0.6"
futures = "0.1"
tokio = "0.1"

[features]
default = []
# use flatbuffer to handshake
flatc = [ "flatbuffers", "flatbuffers-verifier", "p2p/flatc" ]
# use molecule to handshake
molc = [ "molecule", "p2p/molc" ]
