[package]
name = "tentacle-discovery"
version = "0.2.9"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
license = "MIT"
description = "p2p discovery protocol main reference bitcoin"
keywords = ["network", "peer-to-peer", "p2p", "discovery"]
repository = "https://github.com/nervosnetwork/tentacle"
categories = ["network-programming", "asynchronous"]
edition = "2018"

[package.metadata.docs.rs]
features = [ "molc" ]
all-features = false
no-default-features = true

[dependencies]
p2p = { path = "../..", version = "0.3.0-alpha.1", package = "tentacle" }
bytes = "0.5.0"
futures = { version = "0.3.0" }
tokio = { version = "0.2.0", features = ["time", "io-util", "tcp", "dns", "stream"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
log = "0.4"
rand = "0.6.1"
flatbuffers = { version = "0.6.0", optional = true }
flatbuffers-verifier = { version = "0.2.0", optional = true }
molecule = { version = "0.5.0", optional = true }

[dev-dependencies]
env_logger = "0.6"

[features]
default = []
# use flatbuffer to handshake
flatc = [ "flatbuffers", "flatbuffers-verifier", "p2p/flatc" ]
# use molecule to handshake
molc = [ "molecule", "p2p/molc" ]
