[package]
name = "tentacle-discovery"
version = "0.2.9"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
license = "MIT"
description = "p2p discovery protocol main reference bitcoin"
keywords = ["network", "peer-to-peer", "p2p", "discovery"]
repository = "https://github.com/nervosnetwork/tentacle"
categories = ["network-programming", "asynchronous"]
edition = "2018"

[package.metadata.docs.rs]
features = []
all-features = false
no-default-features = true

[dependencies]
p2p = { path = "../../tentacle", version = "0.3.0", package = "tentacle" }
bytes = "1.0"
futures = { version = "0.3.0" }
tokio = { version = "1.0.0", features = ["time", "io-util", "net"] }
tokio-util = { version = "0.6.0", features = ["codec"] }
log = "0.4"
rand = "0.7"
bloom-filters = "0.1"
molecule = { version = "0.7.0" }

[dev-dependencies]
env_logger = "0.6"
