[package]
name = "tentacle-identify"
version = "0.2.9"
authors = ["Qian Linfeng <thewawar@gmail.com>"]
license = "MIT"
description = "p2p identify protocol"
keywords = ["network", "peer-to-peer", "p2p", "identify"]
repository = "https://github.com/nervosnetwork/p2p"
categories = ["network-programming", "asynchronous"]
edition = "2018"

[package.metadata.docs.rs]
features = [ "molc" ]
all-features = false
no-default-features = true

[dependencies]
p2p = { path = "../..", version = "0.2.6", package = "tentacle" }
bytes = "0.4"
flatbuffers = { version = "0.6.0", optional = true }
flatbuffers-verifier = { version = "0.2.0", optional = true }
tokio = "0.1"
log = "0.4"
molecule = { version = "0.4.0", optional = true }

[dev-dependencies]
env_logger = "0.6.0"
futures = "0.1"
tokio = "0.1"

[features]
default = []
# use flatbuffer to handshake
flatc = [ "flatbuffers", "flatbuffers-verifier", "p2p/flatc" ]
# use molecule to handshake
molc = [ "molecule", "p2p/molc" ]
