[package]
name = "tentacle-ping"
version = "0.3.1"
authors = ["Nervos Core Dev <dev@nervos.org>"]
license = "MIT"
keywords = ["network", "peer-to-peer", "p2p", "ping"]
categories = ["network-programming", "asynchronous"]
repository = "https://github.com/nervosnetwork/p2p"
description = "ping protocol implementation for tentacle"
edition = "2018"

[dependencies]
p2p = { path = "../..", version = "0.2.0-alpha.6", package = "tentacle" }
log = "0.4"
flatbuffers = "0.5.0"
flatbuffers-verifier = "0.1.8"
fnv = "1.0.6"
generic-channel = "0.2.0"
bytes = "0.4"
