[package]
name = "tentacle-ping"
version = "0.3.9"
authors = ["Nervos Core Dev <dev@nervos.org>"]
license = "MIT"
keywords = ["network", "peer-to-peer", "p2p", "ping"]
categories = ["network-programming", "asynchronous"]
repository = "https://github.com/nervosnetwork/p2p"
description = "ping protocol implementation for tentacle"
edition = "2018"

[package.metadata.docs.rs]
features = [ "molc" ]
all-features = false
no-default-features = true

[dependencies]
p2p = { path = "../..", version = "0.2.6", package = "tentacle" }
log = "0.4"
flatbuffers = { version = "0.6.0", optional = true }
flatbuffers-verifier = { version = "0.2.0", optional = true }
futures = { version = "0.3.0-alpha.18", package = "futures-preview" }
bytes = "0.4"
molecule = { version = "0.4.0", optional = true }

[dev-dependencies]
env_logger = "0.6.0"
tokio = "0.2.0-alpha.3"

[features]
default = []
# use flatbuffer to handshake
flatc = [ "flatbuffers", "flatbuffers-verifier", "p2p/flatc" ]
# use molecule to handshake
molc = [ "molecule", "p2p/molc" ]
